Change title from 'REST Countries Explorer' to 'Countries Explorer'
Updated the title from 'REST Countries Explorer' to 'Countries Explorer'.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>REST Countries Explorer</title>
+  <title>Countries Explorer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="rest_styles.css" />
 </head>
@@ -43,7 +43,7 @@
       <span class="theme-label" id="labelDark">Dark</span>
     </div>
     
-    <h1>REST Countries Explorer</h1>
+    <h1>Countries Explorer</h1>
     <p>View and search countries by name, code, continent, and capital</p>
   </header>
 
